# GraphicsEditor

./: CMakeLists.txt  Makefile  README.md  main.cpp
shaders/: .frag  .vert
src/app/: app.cpp  app.h
src/base/: BizierCurve.cpp  BizierCurve.h  PickingTexture.cpp  PickingTexture.h  base.cpp  base.h  grid.cpp  grid.h  instance.cpp  instance.h
src/primitives/: BizierCurve.cpp  BizierCurve.h  Line.cpp  Line.h  LineStrip.cpp  LineStrip.h
